# xgenguardian

./: .editorconfig  .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Procfile.dev  README.md  SECURITY.md  docker-compose.yml  ruff.toml  uflix
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  SIMPLE-SETUP.md  UNIFIED-PLAN.md  USAGE.md  advanced-detection-cases.md  architecture.md  blueprint-architecture.md  deeptrust-zero-trust-url-analysis.md  detection-category-improvement-plan.md  dns-test.md  final-engine-architecture-plan.md  maturity-testing-blueprint.md  real-user-acceptance-test-plan.md  standards-mapping.md
migrations/: 0001_init.down.sql  0001_init.sql  0001_init.up.sql  0002_admin.down.sql  0002_admin.sql  0002_admin.up.sql  0003_phase1_foundations.down.sql  0003_phase1_foundations.sql  0003_phase1_foundations.up.sql  0004_executive_mode.down.sql  0004_executive_mode.sql  0004_executive_mode.up.sql  0005_feed_entries.down.sql  0005_feed_entries.sql  0005_feed_entries.up.sql  (+16 more)
services/sandbox-render/: Dockerfile  pyproject.toml  requirements.txt
services/sandbox-render/.venv-fresh/: pyvenv.cfg
services/sandbox-render/app/: challenge.py  dom_inventory.py  downloads.py  main.py  shellcmd.py  yara_scan.py
services/sandbox-render/rules/: README.md  clickfix.yar  cryptojacker.yar  html_smuggling.yar  magecart_skimmer.yar  phishing_kit.yar
services/sandbox-render/tests/: test_challenge.py  test_yara.py
services/visual-match/: Dockerfile  pyproject.toml  requirements.txt
services/visual-match/app/: main.py
(+357 files in other folders)
