[project]
name = "xgg-sandbox-render"
version = "0.1.0"
description = "XGenGuardian — sandboxed headless render service (Playwright)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "playwright>=1.46",
  "playwright-stealth>=1.0.6",
  "yara-python>=4.5.0",
  "boto3>=1.34",
  "pydantic>=2.7",
  "httpx>=0.27",
  "prometheus-client>=0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
