[project]
name = "xgg-visual-match"
version = "0.1.0"
description = "XGenGuardian — visual brand impersonation detector (CLIP + favicon hash + pgvector)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "open-clip-torch>=2.24",
  "torch>=2.3",
  "torchvision>=0.18",
  "Pillow>=10.3",
  "imagehash>=4.3",
  "mmh3>=4.1",
  "psycopg[binary,pool]>=3.2",
  "pgvector>=0.3",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
